--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,7 +1,3 @@
-/****** General ***********/
-* {
-  font-family: "Raleway", sans-serif;
-}
 body {
   display: flex;
   justify-content: center;
@@ -9,10 +5,11 @@ body {
   padding: 0;
   margin: auto;
 }
+
 .main__container {
   width: 100%;
   max-width: 375px;
-  /*padding: 0 50px;*/
+  padding: 0 50px;
   box-sizing: border-box;
   background-color: #9356dc;
-}
+}/*# sourceMappingURL=styles.css.map */
