--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -19,7 +19,7 @@ body {
 .main__container {
   width: 100%;
   max-width: 375px;
-  padding: 0 50px;
+  /*padding: 0 50px;*/
   box-sizing: border-box;
   background-color: $color-primary;
 }
