--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,10 +3,10 @@
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
-$color-white: #fff;
+$color-header-location: black;
 $color-black: #000;
 $color-grey: #eaeaea;
-$color-grey-2: #f6f6f6;
+$color-grey-2: #ffffff;
 
 body {
   display: flex;
@@ -22,4 +22,37 @@ body {
   /*padding: 0 50px;*/
   box-sizing: border-box;
   background-color: $color-primary;
+
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 113px;
+    background-color: $color-grey-2;
+  }
+
+  .header--logo {
+    height: 63px;
+    img {
+      position: relative;
+      width: 197px;
+      height: 36px;
+      top: 14px;
+    }
+  }
+
+  .location {
+    width: 100%;
+    background-color: $color-grey;
+    ul {
+      text-align: center;
+      padding: 0;
+      list-style: none;
+      i {
+        margin: auto;
+        padding-right: 10px;
+      }
+    }
+  }
 }
