--- a/sass/styles.css
+++ b/sass/styles.css
@@ -55,6 +55,9 @@ header {
   text-align: center;
   background-color: #f7f7f7;
   opacity: 0.8;
+  /*.hero__button:hover {
+    background: linear-gradient(360deg, #ff79da, #9356dc);
+  }*/
 }
 .hero p {
   max-width: 315px;
@@ -68,4 +71,43 @@ header {
   border-radius: 25px;
   background: linear-gradient(360deg, #9356dc, #ff79da);
   color: #ffffff;
+}
+
+.fonctionnement__bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  background-color: #ffffff;
+}
+.fonctionnement__bar ol {
+  text-align: center;
+  padding: 0;
+  list-style: none;
+  width: 89.5%;
+}
+.fonctionnement__bar ol li {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  border: none;
+  height: 72.38px;
+  background-color: #f7f7f7;
+  margin-top: 20px;
+}
+.fonctionnement__bar ol i {
+  position: relative;
+  right: 20px;
+}
+.fonctionnement__bar ol p {
+  position: relative;
+  border-radius: 24px;
+  font-size: 14px;
+  right: 84px;
+  padding: 2px 6.5px;
+  background-color: #9356dc;
+  color: #eaeaea;
 }/*# sourceMappingURL=styles.css.map */
