--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -80,4 +80,48 @@ header {
     background: linear-gradient(360deg, #9356dc, #ff79da);
     color: #ffffff;
   }
+
+  /*.hero__button:hover {
+    background: linear-gradient(360deg, #ff79da, #9356dc);
+  }*/
+}
+
+.fonctionnement__bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  background-color: $color-grey-2;
+  ol {
+    text-align: center;
+    padding: 0;
+    list-style: none;
+    width: 89.5%;
+
+    li {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      border-radius: 20px;
+      border: none;
+      height: 72.38px;
+      background-color: $color-grey-darken;
+      margin-top: 20px;
+    }
+    i {
+      position: relative;
+      right: 20px;
+    }
+    p {
+      position: relative;
+      border-radius: 24px;
+      font-size: 14px;
+      right: 84px;
+      padding: 2px 6.5px;
+      background-color: $color-primary;
+      color: $color-grey;
+    }
+  }
 }
