--- a/sass/styles.css
+++ b/sass/styles.css
@@ -14,6 +14,11 @@ body {
   /*background-color: $color-primary;*/
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -65,7 +70,7 @@ header {
 .hero h1 {
   max-width: 275px;
 }
-.hero .hero__button {
+.hero__button {
   width: 218px;
   height: 50px;
   border-radius: 25px;
@@ -112,16 +117,62 @@ header {
   color: #eaeaea;
 }
 
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #eaeaea;
+  /*height: 1058px;*/
+}
+.restaurants .restaurants__title {
+  width: 100%;
+  margin-top: 50px;
+}
+.restaurants .restaurants__title h2 {
+  padding: 0 20px;
+  margin: 1px 0;
+}
 .restaurants__choice img {
+  border-radius: 20px 20px 0 0;
   width: 346px;
-  height: 231px;
+  height: 160px;
   -o-object-fit: cover;
      object-fit: cover;
 }
+.restaurants__choice__box__card {
+  background-color: #ffffff;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+.restaurants__choice__box__card .card-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 75px;
+  box-sizing: border-box;
+  padding: 0 15px;
+}
+.restaurants__choice__box__card .card-content h3,
+.restaurants__choice__box__card .card-content p {
+  margin: 5px 0;
+}
 
 .new__restaurants {
-  position: relative;
   top: 35px;
-  left: 265px;
+  left: 255px;
+}
+
+.new__restaurants-2 {
+  top: 286px;
+  left: 170px;
+}
+
+.new__restaurants,
+.new__restaurants-2 {
+  position: relative;
   background-color: #99e2d0;
+  padding: 6px 11px;
+  border-radius: 2px;
 }/*# sourceMappingURL=styles.css.map */
