--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -25,6 +25,11 @@ body {
   /*background-color: $color-primary;*/
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -73,7 +78,7 @@ header {
     max-width: 275px;
   }
 
-  .hero__button {
+  &__button {
     width: 218px;
     height: 50px;
     border-radius: 25px;
@@ -126,15 +131,61 @@ header {
   }
 }
 
-.restaurants__choice img {
-  width: 346px;
-  height: 231px;
-  object-fit: cover;
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $color-grey;
+  /*height: 1058px;*/
+  .restaurants__title {
+    width: 100%;
+    margin-top: 50px;
+    h2 {
+      padding: 0 20px;
+      margin: 1px 0;
+    }
+  }
+  &__choice img {
+    border-radius: 20px 20px 0 0;
+    width: 346px;
+    height: 160px;
+    object-fit: cover;
+  }
+
+  &__choice__box__card {
+    background-color: $color-grey-2;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    & .card-content {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      height: 75px;
+      box-sizing: border-box;
+      padding: 0 15px;
+      h3,
+      p {
+        margin: 5px 0;
+      }
+    }
+  }
 }
 
 .new__restaurants {
-  position: relative;
   top: 35px;
-  left: 265px;
-  background-color: $color-tertiary;
+  left: 255px;
+}
+.new__restaurants-2 {
+  top: 286px;
+  left: 170px;
+}
+
+.new__restaurants,
+.new__restaurants-2 {
+  position: relative;
+  background-color: #99e2d0;
+  padding: 6px 11px;
+  border-radius: 2px;
 }
