--- a/sass/styles.css
+++ b/sass/styles.css
@@ -175,4 +175,31 @@ header {
   background-color: #99e2d0;
   padding: 6px 11px;
   border-radius: 2px;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  background-color: black;
+}
+footer h2 {
+  color: #eaeaea;
+}
+footer ul {
+  margin: 0 0 10px 0;
+  padding: 0 20px;
+  list-style: none;
+  width: 100%;
+  color: white;
+}
+footer ul li {
+  padding: 5px 0;
+}
+footer ul li .space-list {
+  padding-right: 15px;
+}
+footer ul li .space-list-2 {
+  padding-right: 10px;
 }/*# sourceMappingURL=styles.css.map */
