--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -189,3 +189,30 @@ header {
   padding: 6px 11px;
   border-radius: 2px;
 }
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  background-color: black;
+  h2 {
+    color: $color-grey;
+  }
+  ul {
+    margin: 0 0 10px 0;
+    padding: 0 20px;
+    list-style: none;
+    width: 100%;
+    color: white;
+    li {
+      padding: 5px 0;
+      .space-list {
+        padding-right: 15px;
+      }
+      .space-list-2 {
+        padding-right: 10px;
+      }
+    }
+  }
+}
