--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,9 @@ $color-black: #000;
 $color-grey: #eaeaea;
 $color-grey-2: #ffffff;
 $color-grey-darken: lighten($color-grey, 5%);
+@mixin box-shadow($param) {
+  box-shadow: $param;
+}
 
 body {
   display: flex;
@@ -15,6 +18,7 @@ body {
   margin: 0;
   padding: 0;
   margin: auto;
+  font-family: "Roboto", sans-serif;
 }
 
 .main__container {
@@ -71,8 +75,10 @@ header {
   text-align: center;
   background-color: $color-grey-darken;
   opacity: 0.8;
+  padding-bottom: 50px;
   p {
     max-width: 315px;
+    font-size: 18px;
   }
   h1 {
     max-width: 275px;
@@ -84,11 +90,21 @@ header {
     border-radius: 25px;
     background: linear-gradient(360deg, #9356dc, #ff79da);
     color: #ffffff;
+    margin-top: 15px;
+    border: none;
+    @include box-shadow(0 4px 4px 0 rgba(0, 0, 0, 0.2));
   }
 
   /*.hero__button:hover {
     background: linear-gradient(360deg, #ff79da, #9356dc);
   }*/
+}
+
+.fonctionnement {
+  padding: 55px 0;
+  h2 {
+    margin: 0;
+  }
 }
 
 .fonctionnement__bar {
@@ -103,6 +119,7 @@ header {
     padding: 0;
     list-style: none;
     width: 89.5%;
+    margin: 0;
 
     li {
       display: flex;
@@ -114,6 +131,7 @@ header {
       height: 72.38px;
       background-color: $color-grey-darken;
       margin-top: 20px;
+      @include box-shadow(0 8px 8px 0 rgba(0, 0, 0, 0.1));
     }
     i {
       position: relative;
@@ -123,7 +141,7 @@ header {
       position: relative;
       border-radius: 24px;
       font-size: 14px;
-      right: 84px;
+      right: 78px;
       padding: 2px 6.5px;
       background-color: $color-primary;
       color: $color-grey;
@@ -138,6 +156,7 @@ header {
   align-items: center;
   background-color: $color-grey;
   /*height: 1058px;*/
+  padding-bottom: 40px;
   .restaurants__title {
     width: 100%;
     margin-top: 50px;
@@ -188,6 +207,10 @@ header {
   background-color: #99e2d0;
   padding: 6px 11px;
   border-radius: 2px;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  color: #008766;
 }
 
 footer {
@@ -197,7 +220,10 @@ footer {
   padding: 0;
   background-color: black;
   h2 {
-    color: $color-grey;
+    font-family: "Shrikhand", sans-serif;
+    font-style: italic;
+    font-size: 18px;
+    color: white;
   }
   ul {
     margin: 0 0 10px 0;
