--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -53,10 +53,15 @@ main {
       button {
         width: 59px;
         height: 69px;
-        border-radius: 0 20px 20px 0;
+        border-radius: 0 15px 15px 0;
         background-color: $color-tertiary;
         border: none;
+        display: none;
         /*position: absolute;*/
+        transition: all 450ms;
+        &:hover {
+          transform: scale(1.13);
+        }
       }
     }
   }
@@ -76,7 +81,14 @@ main {
     align-items: center;
     margin-top: 12px;
     /*background-color: $color-primary;*/
+    /*padding-left: 9px;*/
     padding: 13px 9px;
+
+    /*&:hover {
+      padding: 0;
+      padding-left: 9px;
+    }*/
+
     h3,
     p {
       /*padding: 0 10px;*/
@@ -98,7 +110,7 @@ main {
     &__txt {
       display: grid;
       gap: 5px;
-      /*width: 287px;*/
+      width: 287px;
       /*padding-left: 10px;*/
     }
   }
